--- a/statistics/all_data/all_data_tactile_paving.html
+++ b/statistics/all_data/all_data_tactile_paving.html
@@ -11,6 +11,7 @@
 <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/crossings/crossing_types.html">Crossings Charts</a>
 <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/kerbs/kerbs_x_paving_x_wheelchair.html">Kerbs Charts</a>
 <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/other_footways/other_footways_subcategory.html">Other Footways Charts</a>
+<a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/all_data/all_data_surface.html">All Data Charts</a>
 
    <a href="javascript:void(0);" class="icon" onclick="responsiveTopNav()">
      <i class="fa fa-bars"></i>
@@ -18,11 +19,9 @@
  </div>
  
  <div class="sidebar">
-  <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/crossings/crossing_types.html">Crossing Type</a>
-  <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/crossings/crossing_surface.html">Surface Type</a>
-  <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/crossings/crossings_smoothness_x_surface.html">Surface x Smoothness</a>
-  <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/crossings/crossings_yr_moth_update.html">Year and Month Of Update</a>
-  <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/crossings/crossings_number_revisions.html">Number Of Revisions</a>
+  <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/all_data/all_data_surface.html">Surface Type</a>
+  <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/all_data/all_data_smoothness.html">Smoothness Condition</a>
+  <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/all_data/all_data_tactile_paving.html">Tactile Paving Presence</a>
 </div>
 
 
@@ -31,8 +30,10 @@
     <script src="https://kauevestena.github.io/oswm_codebase/assets/webscripts/stats_funcs.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-    
+
     <title>OSWM Dashboard</title>
+
+    <link rel="icon" type="image/x-icon" href="https://kauevestena.github.io/oswm_codebase/assets/homepage/favicon_homepage.png">
 
     
   
@@ -44,7 +45,7 @@
   <div id="vis"></div>
   <script>
     (function(vegaEmbed) {
-      var spec = {"config": {"view": {"continuousWidth": 300, "continuousHeight": 300}, "title": {"fontSize": 24}}, "data": {"name": "data-afadbf26c096e9565fc1c7270ba0a3ba"}, "mark": {"type": "bar"}, "encoding": {"tooltip": [{"field": "percent", "type": "nominal"}], "x": {"field": "n_revs", "sort": "-y", "type": "quantitative"}, "y": {"field": "count", "type": "quantitative"}}, "height": 300, "params": [{"name": "param_12", "select": {"type": "interval", "encodings": ["x", "y"]}, "bind": "scales"}], "title": "Number of Revisions (crossings)", "width": 650, "$schema": "https://vega.github.io/schema/vega-lite/v5.17.0.json", "datasets": {"data-afadbf26c096e9565fc1c7270ba0a3ba": [{"n_revs": 1, "count": 1256, "percent": "64.74%"}, {"n_revs": 3, "count": 264, "percent": "13.61%"}, {"n_revs": 2, "count": 216, "percent": "11.13%"}, {"n_revs": 4, "count": 120, "percent": "6.19%"}, {"n_revs": 5, "count": 41, "percent": "2.11%"}, {"n_revs": 6, "count": 21, "percent": "1.08%"}, {"n_revs": 7, "count": 8, "percent": "0.41%"}, {"n_revs": 8, "count": 7, "percent": "0.36%"}, {"n_revs": 9, "count": 4, "percent": "0.21%"}, {"n_revs": 10, "count": 2, "percent": "0.1%"}, {"n_revs": 14, "count": 1, "percent": "0.05%"}]}};
+      var spec = {"config": {"view": {"continuousWidth": 300, "continuousHeight": 300}, "title": {"fontSize": 24}}, "data": {"name": "data-f2086bc22aff73f0ea80744d06491c85"}, "mark": {"type": "bar"}, "encoding": {"color": {"field": "feature count", "type": "quantitative"}, "tooltip": [{"field": "tactile_paving type", "type": "nominal"}, {"field": "length(km)", "type": "quantitative"}, {"field": "feature count", "type": "quantitative"}], "x": {"field": "tactile_paving type", "sort": "-y", "type": "nominal"}, "y": {"field": "length(km)", "type": "quantitative"}}, "height": 300, "params": [{"name": "include_filter_out_opt", "bind": {"input": "checkbox", "name": "Include \"?\" (Unknown)"}, "value": true}, {"name": "param_21", "select": {"type": "interval", "encodings": ["x", "y"]}, "bind": "scales"}], "title": "All-Category Tactile Paving Presence", "transform": [{"filter": "include_filter_out_opt || datum['tactile_paving type'] != '?'"}], "width": 650, "$schema": "https://vega.github.io/schema/vega-lite/v5.17.0.json", "datasets": {"data-f2086bc22aff73f0ea80744d06491c85": [{"tactile_paving type": "?", "feature count": 17920, "length(km)": 879.6747817424744}, {"tactile_paving type": "bad", "feature count": 1, "length(km)": 0.0}, {"tactile_paving type": "contrasted", "feature count": 11, "length(km)": 0.0}, {"tactile_paving type": "no", "feature count": 1250, "length(km)": 31.770703455230247}, {"tactile_paving type": "yes", "feature count": 36, "length(km)": 0.33286073280871525}]}};
       var embedOpt = {"mode": "vega-lite"};
 
       function showError(el, error){
