--- a/statistics/other_footways/other_footways_subcategory.html
+++ b/statistics/other_footways/other_footways_subcategory.html
@@ -11,6 +11,7 @@
 <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/crossings/crossing_types.html">Crossings Charts</a>
 <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/kerbs/kerbs_x_paving_x_wheelchair.html">Kerbs Charts</a>
 <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/other_footways/other_footways_subcategory.html">Other Footways Charts</a>
+<a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/all_data/all_data_surface.html">All Data Charts</a>
 
    <a href="javascript:void(0);" class="icon" onclick="responsiveTopNav()">
      <i class="fa fa-bars"></i>
@@ -18,9 +19,10 @@
  </div>
  
  <div class="sidebar">
-  <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/other_footways/other_footways_subcategory.html">Incline Values</a>
-  <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/other_footways/other_footways_surface.html">Surface Type</a>
+  <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/other_footways/other_footways_subcategory.html">Subcategory</a>
   <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/other_footways/other_footways_smoothness_x_surface.html">Surface x Smoothness</a>
+  <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/other_footways/other_footways_surface.html">Surface Type</a>
+  <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/other_footways/other_footways_smoothness.html">Smoothness</a>
   <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/other_footways/other_footways_length.html">Length (km)</a>
   <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/other_footways/other_footways_age.html">Update Age</a>
   <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/other_footways/other_footways_n_revs.html">Number of Revisions</a>
@@ -32,20 +34,22 @@
     <script src="https://kauevestena.github.io/oswm_codebase/assets/webscripts/stats_funcs.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-    
+
     <title>OSWM Dashboard</title>
+
+    <link rel="icon" type="image/x-icon" href="https://kauevestena.github.io/oswm_codebase/assets/homepage/favicon_homepage.png">
 
     
   
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/vega@5"></script>
-  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/vega-lite@5.20.1"></script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/vega-lite@5.17.0"></script>
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/vega-embed@6"></script>
 </head>
 <body>
   <div id="vis"></div>
   <script>
     (function(vegaEmbed) {
-      var spec = {"config": {"view": {"continuousWidth": 300, "continuousHeight": 300}, "title": {"fontSize": 24}}, "data": {"name": "data-f3d76db7d95d3f74dceb022f378df043"}, "mark": {"type": "bar"}, "encoding": {"color": {"field": "feature count", "type": "quantitative"}, "tooltip": [{"field": "oswm_footway type", "type": "nominal"}, {"field": "length(km)", "type": "quantitative"}, {"field": "feature count", "type": "quantitative"}], "x": {"field": "oswm_footway type", "sort": "-y", "type": "nominal"}, "y": {"field": "length(km)", "type": "quantitative"}}, "height": 300, "params": [{"name": "include_filter_out_opt", "bind": {"input": "checkbox", "name": "Include \"?\" (Unknown)"}, "value": true}, {"name": "param_15", "select": {"type": "interval", "encodings": ["x", "y"]}, "bind": "scales"}], "title": "Sub-category (Layer)", "transform": [{"filter": "include_filter_out_opt || datum['oswm_footway type'] != '?'"}], "width": 650, "$schema": "https://vega.github.io/schema/vega-lite/v5.20.1.json", "datasets": {"data-f3d76db7d95d3f74dceb022f378df043": [{"oswm_footway type": "informal_footways", "feature count": 180, "length(km)": 32.45945723072036}, {"oswm_footway type": "main_footways", "feature count": 5304, "length(km)": 426.0638569639774}, {"oswm_footway type": "pedestrian_areas", "feature count": 49, "length(km)": 19.8143499463349}, {"oswm_footway type": "potential_footways", "feature count": 741, "length(km)": 100.00082363560861}, {"oswm_footway type": "stairways", "feature count": 315, "length(km)": 4.639557590552573}]}};
+      var spec = {"config": {"view": {"continuousWidth": 300, "continuousHeight": 300}, "title": {"fontSize": 24}}, "data": {"name": "data-f2687c8ea6f53a16d6eea14ed731c616"}, "mark": {"type": "bar"}, "encoding": {"color": {"field": "feature count", "type": "quantitative"}, "tooltip": [{"field": "oswm_footway type", "type": "nominal"}, {"field": "length(km)", "type": "quantitative"}, {"field": "feature count", "type": "quantitative"}], "x": {"field": "oswm_footway type", "sort": "-y", "type": "nominal"}, "y": {"field": "length(km)", "type": "quantitative"}}, "height": 300, "params": [{"name": "include_filter_out_opt", "bind": {"input": "checkbox", "name": "Include \"?\" (Unknown)"}, "value": true}, {"name": "param_15", "select": {"type": "interval", "encodings": ["x", "y"]}, "bind": "scales"}], "title": "Sub-category (Layer)", "transform": [{"filter": "include_filter_out_opt || datum['oswm_footway type'] != '?'"}], "width": 650, "$schema": "https://vega.github.io/schema/vega-lite/v5.17.0.json", "datasets": {"data-f2687c8ea6f53a16d6eea14ed731c616": [{"oswm_footway type": "informal_footways", "feature count": 180, "length(km)": 32.45945723072023}, {"oswm_footway type": "main_footways", "feature count": 5304, "length(km)": 426.063856963977}, {"oswm_footway type": "pedestrian_areas", "feature count": 49, "length(km)": 19.8143499463349}, {"oswm_footway type": "potential_footways", "feature count": 741, "length(km)": 100.00082363560861}, {"oswm_footway type": "stairways", "feature count": 315, "length(km)": 4.639557590552573}]}};
       var embedOpt = {"mode": "vega-lite"};
 
       function showError(el, error){
