--- a/statistics/all_data/all_data_surface.html
+++ b/statistics/all_data/all_data_surface.html
@@ -6,12 +6,12 @@
 
     
     <div class="topnav" id="stTopnav">
-        <a href="https://kauevestena.github.io/opensidewalkmap_beta/" class="active">Home</a>
+        <a href="https://kauevestena.github.io/opensidewalkmap_beta/" class="active">Go to Node Home</a>
     <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/sidewalks/sidewalks_smoothness_x_surface.html">Sidewalks Charts</a>
 <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/crossings/crossing_types.html">Crossings Charts</a>
 <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/kerbs/kerbs_x_paving_x_wheelchair.html">Kerbs Charts</a>
 <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/other_footways/other_footways_subcategory.html">Other Footways Charts</a>
-<a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/all_data/all_data_surface.html">All Data Charts</a>
+<a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/all_data/all_data_category.html">All Data Charts</a>
 
    <a href="javascript:void(0);" class="icon" onclick="responsiveTopNav()">
      <i class="fa fa-bars"></i>
@@ -19,9 +19,15 @@
  </div>
  
  <div class="sidebar">
+  <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/all_data/all_data_category.html">Layer Feature Count</a>
   <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/all_data/all_data_surface.html">Surface Type</a>
   <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/all_data/all_data_smoothness.html">Smoothness Condition</a>
   <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/all_data/all_data_tactile_paving.html">Tactile Paving Presence</a>
+  <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/all_data/all_data_lit.html">Lighting Status</a>
+  <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/all_data/all_data_traffic_calming.html">Traffic Calming Status</a>
+  <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/all_data/all_data_wheelchair_tag.html">wheelchair=*</a>
+  <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/all_data/all_data_age.html">Update Age</a>
+  <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/all_data/all_data_n_revs.html">Number of Revisions</a>
 </div>
 
 
@@ -38,14 +44,14 @@
     
   
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/vega@5"></script>
-  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/vega-lite@5.20.1"></script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/vega-lite@5.17.0"></script>
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/vega-embed@6"></script>
 </head>
 <body>
   <div id="vis"></div>
   <script>
     (function(vegaEmbed) {
-      var spec = {"config": {"view": {"continuousWidth": 300, "continuousHeight": 300}, "title": {"fontSize": 24}}, "data": {"name": "data-ed3b934787dd3229d324db5f23a35161"}, "mark": {"type": "bar"}, "encoding": {"color": {"field": "feature count", "type": "quantitative"}, "tooltip": [{"field": "surface type", "type": "nominal"}, {"field": "length(km)", "type": "quantitative"}, {"field": "feature count", "type": "quantitative"}], "x": {"field": "surface type", "sort": "-y", "type": "nominal"}, "y": {"field": "length(km)", "type": "quantitative"}}, "height": 300, "params": [{"name": "include_filter_out_opt", "bind": {"input": "checkbox", "name": "Include \"?\" (Unknown)"}, "value": true}, {"name": "param_19", "select": {"type": "interval", "encodings": ["x", "y"]}, "bind": "scales"}], "title": "All-Category Surface Type", "transform": [{"filter": "include_filter_out_opt || datum['surface type'] != '?'"}], "width": 650, "$schema": "https://vega.github.io/schema/vega-lite/v5.20.1.json", "datasets": {"data-ed3b934787dd3229d324db5f23a35161": [{"surface type": "?", "feature count": 14253, "length(km)": 578.7469377580215}, {"surface type": "Petit_Pav\u00ea", "feature count": 1, "length(km)": 0.0006198559024402606}, {"surface type": "asphalt", "feature count": 1793, "length(km)": 166.28288300352952}, {"surface type": "ceramic:tiles", "feature count": 1, "length(km)": 0.0028251675297381973}, {"surface type": "cobblestone", "feature count": 14, "length(km)": 1.265495229319152}, {"surface type": "compacted", "feature count": 16, "length(km)": 0.5363920220390284}, {"surface type": "concrete", "feature count": 614, "length(km)": 33.17615427620536}, {"surface type": "concrete:lanes", "feature count": 23, "length(km)": 0.7158541925294446}, {"surface type": "concrete:plates", "feature count": 431, "length(km)": 15.25876538849662}, {"surface type": "dirt", "feature count": 15, "length(km)": 1.4671563269643995}, {"surface type": "earth", "feature count": 1, "length(km)": 0.012021530059569623}, {"surface type": "fine_gravel", "feature count": 10, "length(km)": 0.47705523398320665}, {"surface type": "grass", "feature count": 90, "length(km)": 3.306635544202621}, {"surface type": "grass_paver", "feature count": 8, "length(km)": 0.7674044272761966}, {"surface type": "gravel", "feature count": 30, "length(km)": 2.8679359356646428}, {"surface type": "ground", "feature count": 42, "length(km)": 6.726134912224518}, {"surface type": "interlock", "feature count": 1, "length(km)": 0.02513710321922607}, {"surface type": "metal", "feature count": 20, "length(km)": 1.0003207872101254}, {"surface type": "mud", "feature count": 1, "length(km)": 0.3444615251821609}, {"surface type": "paved", "feature count": 136, "length(km)": 11.283011581581391}, {"surface type": "paver", "feature count": 2, "length(km)": 0.055366550062099805}, {"surface type": "paving_stones", "feature count": 734, "length(km)": 34.16374437177662}, {"surface type": "pebblestone", "feature count": 3, "length(km)": 0.09986294210850076}, {"surface type": "rock", "feature count": 10, "length(km)": 0.7123305276025113}, {"surface type": "sand", "feature count": 1, "length(km)": 0.05544750822000682}, {"surface type": "sett", "feature count": 871, "length(km)": 41.17187213420928}, {"surface type": "stepping_stones", "feature count": 6, "length(km)": 0.22006597186387933}, {"surface type": "unhewn_cobblestone", "feature count": 1, "length(km)": 0.21065414021715198}, {"surface type": "unpaved", "feature count": 61, "length(km)": 10.014417801145754}, {"surface type": "wood", "feature count": 68, "length(km)": 1.6904187105285764}]}};
+      var spec = {"config": {"view": {"continuousWidth": 300, "continuousHeight": 300}, "title": {"fontSize": 24}}, "data": {"name": "data-3232615877679360c633418128d463e9"}, "mark": {"type": "bar"}, "encoding": {"color": {"field": "feature count", "type": "quantitative"}, "tooltip": [{"field": "surface type", "type": "nominal"}, {"field": "length(km)", "type": "quantitative"}, {"field": "feature count", "type": "quantitative"}], "x": {"field": "surface type", "sort": "-y", "type": "nominal"}, "y": {"field": "length(km)", "type": "quantitative"}}, "height": 300, "params": [{"name": "include_filter_out_opt", "bind": {"input": "checkbox", "name": "Include \"?\" (Unknown)"}, "value": true}, {"name": "param_20", "select": {"type": "interval", "encodings": ["x", "y"]}, "bind": "scales"}], "title": "All-Category Surface Type", "transform": [{"filter": "include_filter_out_opt || datum['surface type'] != '?'"}], "width": 650, "$schema": "https://vega.github.io/schema/vega-lite/v5.17.0.json", "datasets": {"data-3232615877679360c633418128d463e9": [{"surface type": "?", "feature count": 14253, "length(km)": 578.7469377580215}, {"surface type": "Petit_Pav\u00ea", "feature count": 1, "length(km)": 0.0006198559024402606}, {"surface type": "asphalt", "feature count": 1793, "length(km)": 166.28288300352926}, {"surface type": "ceramic:tiles", "feature count": 1, "length(km)": 0.0028251675297381973}, {"surface type": "cobblestone", "feature count": 14, "length(km)": 1.265495229319152}, {"surface type": "compacted", "feature count": 16, "length(km)": 0.5363920220390284}, {"surface type": "concrete", "feature count": 614, "length(km)": 33.17615427620537}, {"surface type": "concrete:lanes", "feature count": 23, "length(km)": 0.7158541925294446}, {"surface type": "concrete:plates", "feature count": 431, "length(km)": 15.25876538849662}, {"surface type": "dirt", "feature count": 15, "length(km)": 1.4671563269643995}, {"surface type": "earth", "feature count": 1, "length(km)": 0.012021530059569623}, {"surface type": "fine_gravel", "feature count": 10, "length(km)": 0.47705523398320665}, {"surface type": "grass", "feature count": 90, "length(km)": 3.306635544202621}, {"surface type": "grass_paver", "feature count": 8, "length(km)": 0.7674044272761966}, {"surface type": "gravel", "feature count": 30, "length(km)": 2.8679359356646428}, {"surface type": "ground", "feature count": 42, "length(km)": 6.726134912224518}, {"surface type": "interlock", "feature count": 1, "length(km)": 0.02513710321922607}, {"surface type": "metal", "feature count": 20, "length(km)": 1.0003207872101254}, {"surface type": "mud", "feature count": 1, "length(km)": 0.3444615251821609}, {"surface type": "paved", "feature count": 136, "length(km)": 11.283011581581391}, {"surface type": "paver", "feature count": 2, "length(km)": 0.055366550062099805}, {"surface type": "paving_stones", "feature count": 734, "length(km)": 34.16374437177662}, {"surface type": "pebblestone", "feature count": 3, "length(km)": 0.09986294210850076}, {"surface type": "rock", "feature count": 10, "length(km)": 0.7123305276025113}, {"surface type": "sand", "feature count": 1, "length(km)": 0.05544750822000682}, {"surface type": "sett", "feature count": 871, "length(km)": 41.17187213420928}, {"surface type": "stepping_stones", "feature count": 6, "length(km)": 0.22006597186387933}, {"surface type": "unhewn_cobblestone", "feature count": 1, "length(km)": 0.21065414021715198}, {"surface type": "unpaved", "feature count": 61, "length(km)": 10.014417801145754}, {"surface type": "wood", "feature count": 68, "length(km)": 1.6904187105285764}]}};
       var embedOpt = {"mode": "vega-lite"};
 
       function showError(el, error){
@@ -62,5 +68,6 @@
     })(vegaEmbed);
 
   </script>
+<h4 style="padding-left: 14%;font-weight: normal;font-family: sans-serif;"> - Explanation: This chart allows you to visualize the different types of <a href='https://wiki.openstreetmap.org/wiki/Key:surface'>surface</a> present in the whole data. </h4>
 </body>
 </html>
