--- a/statistics/all_data/all_data_tactile_paving.html
+++ b/statistics/all_data/all_data_tactile_paving.html
@@ -6,12 +6,12 @@
 
     
     <div class="topnav" id="stTopnav">
-        <a href="https://kauevestena.github.io/opensidewalkmap_beta/" class="active">Home</a>
+        <a href="https://kauevestena.github.io/opensidewalkmap_beta/" class="active">Go to Node Home</a>
     <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/sidewalks/sidewalks_smoothness_x_surface.html">Sidewalks Charts</a>
 <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/crossings/crossing_types.html">Crossings Charts</a>
 <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/kerbs/kerbs_x_paving_x_wheelchair.html">Kerbs Charts</a>
 <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/other_footways/other_footways_subcategory.html">Other Footways Charts</a>
-<a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/all_data/all_data_surface.html">All Data Charts</a>
+<a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/all_data/all_data_category.html">All Data Charts</a>
 
    <a href="javascript:void(0);" class="icon" onclick="responsiveTopNav()">
      <i class="fa fa-bars"></i>
@@ -19,9 +19,15 @@
  </div>
  
  <div class="sidebar">
+  <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/all_data/all_data_category.html">Layer Feature Count</a>
   <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/all_data/all_data_surface.html">Surface Type</a>
   <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/all_data/all_data_smoothness.html">Smoothness Condition</a>
   <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/all_data/all_data_tactile_paving.html">Tactile Paving Presence</a>
+  <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/all_data/all_data_lit.html">Lighting Status</a>
+  <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/all_data/all_data_traffic_calming.html">Traffic Calming Status</a>
+  <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/all_data/all_data_wheelchair_tag.html">wheelchair=*</a>
+  <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/all_data/all_data_age.html">Update Age</a>
+  <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/all_data/all_data_n_revs.html">Number of Revisions</a>
 </div>
 
 
@@ -38,14 +44,14 @@
     
   
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/vega@5"></script>
-  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/vega-lite@5.20.1"></script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/vega-lite@5.17.0"></script>
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/vega-embed@6"></script>
 </head>
 <body>
   <div id="vis"></div>
   <script>
     (function(vegaEmbed) {
-      var spec = {"config": {"view": {"continuousWidth": 300, "continuousHeight": 300}, "title": {"fontSize": 24}}, "data": {"name": "data-ff3b0a528c6c3c2bdb02f01b3d024474"}, "mark": {"type": "bar"}, "encoding": {"color": {"field": "feature count", "type": "quantitative"}, "tooltip": [{"field": "tactile_paving type", "type": "nominal"}, {"field": "length(km)", "type": "quantitative"}, {"field": "feature count", "type": "quantitative"}], "x": {"field": "tactile_paving type", "sort": "-y", "type": "nominal"}, "y": {"field": "length(km)", "type": "quantitative"}}, "height": 300, "params": [{"name": "include_filter_out_opt", "bind": {"input": "checkbox", "name": "Include \"?\" (Unknown)"}, "value": true}, {"name": "param_21", "select": {"type": "interval", "encodings": ["x", "y"]}, "bind": "scales"}], "title": "All-Category Tactile Paving Presence", "transform": [{"filter": "include_filter_out_opt || datum['tactile_paving type'] != '?'"}], "width": 650, "$schema": "https://vega.github.io/schema/vega-lite/v5.20.1.json", "datasets": {"data-ff3b0a528c6c3c2bdb02f01b3d024474": [{"tactile_paving type": "?", "feature count": 17959, "length(km)": 880.5538182708364}, {"tactile_paving type": "bad", "feature count": 1, "length(km)": 0.0}, {"tactile_paving type": "contrasted", "feature count": 11, "length(km)": 0.0}, {"tactile_paving type": "no", "feature count": 1250, "length(km)": 31.77070345523024}, {"tactile_paving type": "yes", "feature count": 36, "length(km)": 0.33286073280871525}]}};
+      var spec = {"config": {"view": {"continuousWidth": 300, "continuousHeight": 300}, "title": {"fontSize": 24}}, "data": {"name": "data-cd03cfd50dbd512f1e226fda43c0fca7"}, "mark": {"type": "bar"}, "encoding": {"color": {"field": "feature count", "type": "quantitative"}, "tooltip": [{"field": "tactile_paving type", "type": "nominal"}, {"field": "length(km)", "type": "quantitative"}, {"field": "feature count", "type": "quantitative"}], "x": {"field": "tactile_paving type", "sort": "-y", "type": "nominal"}, "y": {"field": "length(km)", "type": "quantitative"}}, "height": 300, "params": [{"name": "include_filter_out_opt", "bind": {"input": "checkbox", "name": "Include \"?\" (Unknown)"}, "value": true}, {"name": "param_22", "select": {"type": "interval", "encodings": ["x", "y"]}, "bind": "scales"}], "title": "All-Category Tactile Paving Presence", "transform": [{"filter": "include_filter_out_opt || datum['tactile_paving type'] != '?'"}], "width": 650, "$schema": "https://vega.github.io/schema/vega-lite/v5.17.0.json", "datasets": {"data-cd03cfd50dbd512f1e226fda43c0fca7": [{"tactile_paving type": "?", "feature count": 17959, "length(km)": 880.5538182708361}, {"tactile_paving type": "bad", "feature count": 1, "length(km)": 0.0}, {"tactile_paving type": "contrasted", "feature count": 11, "length(km)": 0.0}, {"tactile_paving type": "no", "feature count": 1250, "length(km)": 31.770703455230247}, {"tactile_paving type": "yes", "feature count": 36, "length(km)": 0.33286073280871525}]}};
       var embedOpt = {"mode": "vega-lite"};
 
       function showError(el, error){
@@ -62,5 +68,6 @@
     })(vegaEmbed);
 
   </script>
+<h4 style="padding-left: 14%;font-weight: normal;font-family: sans-serif;"> - Explanation: This chart allows you to visualize the reported presence of <a href='https://wiki.openstreetmap.org/wiki/Key:tactile_paving'>Tactile Paving</a> in the whole data. </h4>
 </body>
 </html>
