--- a/statistics/kerbs/kerb_types.html
+++ b/statistics/kerbs/kerb_types.html
@@ -6,12 +6,12 @@
 
     
     <div class="topnav" id="stTopnav">
-        <a href="https://kauevestena.github.io/opensidewalkmap_beta/" class="active">Home</a>
+        <a href="https://kauevestena.github.io/opensidewalkmap_beta/" class="active">Go to Node Home</a>
     <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/sidewalks/sidewalks_smoothness_x_surface.html">Sidewalks Charts</a>
 <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/crossings/crossing_types.html">Crossings Charts</a>
 <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/kerbs/kerbs_x_paving_x_wheelchair.html">Kerbs Charts</a>
 <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/other_footways/other_footways_subcategory.html">Other Footways Charts</a>
-<a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/all_data/all_data_surface.html">All Data Charts</a>
+<a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/all_data/all_data_category.html">All Data Charts</a>
 
    <a href="javascript:void(0);" class="icon" onclick="responsiveTopNav()">
      <i class="fa fa-bars"></i>
@@ -42,14 +42,14 @@
     
   
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/vega@5"></script>
-  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/vega-lite@5.20.1"></script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/vega-lite@5.17.0"></script>
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/vega-embed@6"></script>
 </head>
 <body>
   <div id="vis"></div>
   <script>
     (function(vegaEmbed) {
-      var spec = {"config": {"view": {"continuousWidth": 300, "continuousHeight": 300}, "title": {"fontSize": 24}}, "data": {"name": "data-348cae16f265ba6513172ebc8c5ef401"}, "mark": {"type": "bar"}, "encoding": {"tooltip": [{"field": "percent", "type": "nominal"}], "x": {"field": "kerb", "sort": "-y", "type": "nominal"}, "y": {"field": "count", "type": "quantitative"}}, "height": 300, "params": [{"name": "param_11", "select": {"type": "interval", "encodings": ["x", "y"]}, "bind": "scales"}], "title": "Kerb Type", "width": 650, "$schema": "https://vega.github.io/schema/vega-lite/v5.20.1.json", "datasets": {"data-348cae16f265ba6513172ebc8c5ef401": [{"kerb": "?", "count": 1783, "percent": "64.62%"}, {"kerb": "lowered", "count": 488, "percent": "17.69%"}, {"kerb": "raised", "count": 295, "percent": "10.69%"}, {"kerb": "flush", "count": 93, "percent": "3.37%"}, {"kerb": "no", "count": 78, "percent": "2.83%"}, {"kerb": "rolled", "count": 10, "percent": "0.36%"}, {"kerb": "regular", "count": 9, "percent": "0.33%"}, {"kerb": "normal", "count": 2, "percent": "0.07%"}, {"kerb": "lowered=no", "count": 1, "percent": "0.04%"}]}};
+      var spec = {"config": {"view": {"continuousWidth": 300, "continuousHeight": 300}, "title": {"fontSize": 24}}, "data": {"name": "data-348cae16f265ba6513172ebc8c5ef401"}, "mark": {"type": "bar"}, "encoding": {"tooltip": [{"field": "percent", "type": "nominal"}], "x": {"field": "kerb", "sort": "-y", "type": "nominal"}, "y": {"field": "count", "type": "quantitative"}}, "height": 300, "params": [{"name": "param_11", "select": {"type": "interval", "encodings": ["x", "y"]}, "bind": "scales"}], "title": "Kerb Type", "width": 650, "$schema": "https://vega.github.io/schema/vega-lite/v5.17.0.json", "datasets": {"data-348cae16f265ba6513172ebc8c5ef401": [{"kerb": "?", "count": 1783, "percent": "64.62%"}, {"kerb": "lowered", "count": 488, "percent": "17.69%"}, {"kerb": "raised", "count": 295, "percent": "10.69%"}, {"kerb": "flush", "count": 93, "percent": "3.37%"}, {"kerb": "no", "count": 78, "percent": "2.83%"}, {"kerb": "rolled", "count": 10, "percent": "0.36%"}, {"kerb": "regular", "count": 9, "percent": "0.33%"}, {"kerb": "normal", "count": 2, "percent": "0.07%"}, {"kerb": "lowered=no", "count": 1, "percent": "0.04%"}]}};
       var embedOpt = {"mode": "vega-lite"};
 
       function showError(el, error){
@@ -66,5 +66,6 @@
     })(vegaEmbed);
 
   </script>
+<h4 style="padding-left: 14%;font-weight: normal;font-family: sans-serif;"> - Explanation: This chart allows you to visualize the different <a href='https://wiki.openstreetmap.org/wiki/Key:kerb'>kerb</a> types of the kerbs. </h4>
 </body>
 </html>
