--- a/statistics/other_footways/other_footways_smoothness.html
+++ b/statistics/other_footways/other_footways_smoothness.html
@@ -6,12 +6,12 @@
 
     
     <div class="topnav" id="stTopnav">
-        <a href="https://kauevestena.github.io/opensidewalkmap_beta/" class="active">Home</a>
+        <a href="https://kauevestena.github.io/opensidewalkmap_beta/" class="active">Go to Node Home</a>
     <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/sidewalks/sidewalks_smoothness_x_surface.html">Sidewalks Charts</a>
 <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/crossings/crossing_types.html">Crossings Charts</a>
 <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/kerbs/kerbs_x_paving_x_wheelchair.html">Kerbs Charts</a>
 <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/other_footways/other_footways_subcategory.html">Other Footways Charts</a>
-<a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/all_data/all_data_surface.html">All Data Charts</a>
+<a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/all_data/all_data_category.html">All Data Charts</a>
 
    <a href="javascript:void(0);" class="icon" onclick="responsiveTopNav()">
      <i class="fa fa-bars"></i>
@@ -42,14 +42,14 @@
     
   
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/vega@5"></script>
-  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/vega-lite@5.20.1"></script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/vega-lite@5.17.0"></script>
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/vega-embed@6"></script>
 </head>
 <body>
   <div id="vis"></div>
   <script>
     (function(vegaEmbed) {
-      var spec = {"config": {"view": {"continuousWidth": 300, "continuousHeight": 300}, "title": {"fontSize": 24}}, "data": {"name": "data-bb4e49985c840d1f20cf54ef5a5b123f"}, "mark": {"type": "bar"}, "encoding": {"color": {"field": "feature count", "type": "quantitative"}, "tooltip": [{"field": "smoothness type", "type": "nominal"}, {"field": "length(km)", "type": "quantitative"}, {"field": "feature count", "type": "quantitative"}], "x": {"field": "smoothness type", "sort": "-y", "type": "nominal"}, "y": {"field": "length(km)", "type": "quantitative"}}, "height": 300, "params": [{"name": "include_filter_out_opt", "bind": {"input": "checkbox", "name": "Include \"?\" (Unknown)"}, "value": true}, {"name": "param_18", "select": {"type": "interval", "encodings": ["x", "y"]}, "bind": "scales"}], "title": "Other Footways Smoothness", "transform": [{"filter": "include_filter_out_opt || datum['smoothness type'] != '?'"}], "width": 650, "$schema": "https://vega.github.io/schema/vega-lite/v5.20.1.json", "datasets": {"data-bb4e49985c840d1f20cf54ef5a5b123f": [{"smoothness type": "?", "feature count": 6540, "length(km)": 577.7998979509196}, {"smoothness type": "bad", "feature count": 3, "length(km)": 0.18021890142684766}, {"smoothness type": "excellent", "feature count": 21, "length(km)": 1.5622728906951466}, {"smoothness type": "good", "feature count": 32, "length(km)": 4.653825961747856}, {"smoothness type": "horrible", "feature count": 3, "length(km)": 0.20426803671011873}, {"smoothness type": "impassable", "feature count": 1, "length(km)": 0.008458151850001323}, {"smoothness type": "intermediate", "feature count": 40, "length(km)": 1.8214371426180347}, {"smoothness type": "very_horrible", "feature count": 1, "length(km)": 0.695377808296013}]}};
+      var spec = {"config": {"view": {"continuousWidth": 300, "continuousHeight": 300}, "title": {"fontSize": 24}}, "data": {"name": "data-e0413f80e2e1f9236799f0adc8a10d43"}, "mark": {"type": "bar"}, "encoding": {"color": {"field": "feature count", "type": "quantitative"}, "tooltip": [{"field": "smoothness type", "type": "nominal"}, {"field": "length(km)", "type": "quantitative"}, {"field": "feature count", "type": "quantitative"}], "x": {"field": "smoothness type", "sort": "-y", "type": "nominal"}, "y": {"field": "length(km)", "type": "quantitative"}}, "height": 300, "params": [{"name": "include_filter_out_opt", "bind": {"input": "checkbox", "name": "Include \"?\" (Unknown)"}, "value": true}, {"name": "param_18", "select": {"type": "interval", "encodings": ["x", "y"]}, "bind": "scales"}], "title": "Other Footways Smoothness", "transform": [{"filter": "include_filter_out_opt || datum['smoothness type'] != '?'"}], "width": 650, "$schema": "https://vega.github.io/schema/vega-lite/v5.17.0.json", "datasets": {"data-e0413f80e2e1f9236799f0adc8a10d43": [{"smoothness type": "?", "feature count": 6540, "length(km)": 577.799897950919}, {"smoothness type": "bad", "feature count": 3, "length(km)": 0.18021890142684766}, {"smoothness type": "excellent", "feature count": 21, "length(km)": 1.5622728906951466}, {"smoothness type": "good", "feature count": 32, "length(km)": 4.653825961747856}, {"smoothness type": "horrible", "feature count": 3, "length(km)": 0.20426803671011873}, {"smoothness type": "impassable", "feature count": 1, "length(km)": 0.008458151850001323}, {"smoothness type": "intermediate", "feature count": 40, "length(km)": 1.8214371426180347}, {"smoothness type": "very_horrible", "feature count": 1, "length(km)": 0.695377808296013}]}};
       var embedOpt = {"mode": "vega-lite"};
 
       function showError(el, error){
@@ -66,5 +66,6 @@
     })(vegaEmbed);
 
   </script>
+<h4 style="padding-left: 14%;font-weight: normal;font-family: sans-serif;"> - Explanation: This chart allows you to visualize the different levels of <a href='https://wiki.openstreetmap.org/wiki/Key:smoothness'>smoothness</a> present on other footways. </h4>
 </body>
 </html>
