--- a/statistics/sidewalks/sidewalks_smoothness.html
+++ b/statistics/sidewalks/sidewalks_smoothness.html
@@ -6,12 +6,12 @@
 
     
     <div class="topnav" id="stTopnav">
-        <a href="https://kauevestena.github.io/opensidewalkmap_beta/" class="active">Home</a>
+        <a href="https://kauevestena.github.io/opensidewalkmap_beta/" class="active">Go to Node Home</a>
     <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/sidewalks/sidewalks_smoothness_x_surface.html">Sidewalks Charts</a>
 <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/crossings/crossing_types.html">Crossings Charts</a>
 <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/kerbs/kerbs_x_paving_x_wheelchair.html">Kerbs Charts</a>
 <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/other_footways/other_footways_subcategory.html">Other Footways Charts</a>
-<a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/all_data/all_data_surface.html">All Data Charts</a>
+<a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/all_data/all_data_category.html">All Data Charts</a>
 
    <a href="javascript:void(0);" class="icon" onclick="responsiveTopNav()">
      <i class="fa fa-bars"></i>
@@ -44,14 +44,14 @@
     
   
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/vega@5"></script>
-  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/vega-lite@5.20.1"></script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/vega-lite@5.17.0"></script>
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/vega-embed@6"></script>
 </head>
 <body>
   <div id="vis"></div>
   <script>
     (function(vegaEmbed) {
-      var spec = {"config": {"view": {"continuousWidth": 300, "continuousHeight": 300}, "title": {"fontSize": 24}}, "data": {"name": "data-5ce9c5d6903e207abb6a2e90e50faca1"}, "mark": {"type": "bar"}, "encoding": {"color": {"field": "feature count", "type": "quantitative"}, "tooltip": [{"field": "smoothness type", "type": "nominal"}, {"field": "length(km)", "type": "quantitative"}, {"field": "feature count", "type": "quantitative"}], "x": {"field": "smoothness type", "sort": "-y", "type": "nominal"}, "y": {"field": "length(km)", "type": "quantitative"}}, "height": 300, "params": [{"name": "include_filter_out_opt", "bind": {"input": "checkbox", "name": "Include \"?\" (Unknown)"}, "value": true}, {"name": "param_3", "select": {"type": "interval", "encodings": ["x", "y"]}, "bind": "scales"}], "title": "Sidewalks Smoothness Condition", "transform": [{"filter": "include_filter_out_opt || datum['smoothness type'] != '?'"}], "width": 650, "$schema": "https://vega.github.io/schema/vega-lite/v5.20.1.json", "datasets": {"data-5ce9c5d6903e207abb6a2e90e50faca1": [{"smoothness type": "?", "feature count": 6606, "length(km)": 263.3571293987686}, {"smoothness type": "bad", "feature count": 202, "length(km)": 4.8883051070644274}, {"smoothness type": "excellent", "feature count": 125, "length(km)": 4.618268937303478}, {"smoothness type": "good", "feature count": 532, "length(km)": 17.62979246603865}, {"smoothness type": "horrible", "feature count": 4, "length(km)": 0.0826631821806614}, {"smoothness type": "impassable", "feature count": 4, "length(km)": 0.13028396605245757}, {"smoothness type": "intermediate", "feature count": 391, "length(km)": 11.186277272551479}, {"smoothness type": "very_bad", "feature count": 20, "length(km)": 0.6059131830369366}, {"smoothness type": "very_horrible", "feature count": 6, "length(km)": 0.236517099699315}]}};
+      var spec = {"config": {"view": {"continuousWidth": 300, "continuousHeight": 300}, "title": {"fontSize": 24}}, "data": {"name": "data-c7cd767b01c954718f66447756eac210"}, "mark": {"type": "bar"}, "encoding": {"color": {"field": "feature count", "type": "quantitative"}, "tooltip": [{"field": "smoothness type", "type": "nominal"}, {"field": "length(km)", "type": "quantitative"}, {"field": "feature count", "type": "quantitative"}], "x": {"field": "smoothness type", "sort": "-y", "type": "nominal"}, "y": {"field": "length(km)", "type": "quantitative"}}, "height": 300, "params": [{"name": "include_filter_out_opt", "bind": {"input": "checkbox", "name": "Include \"?\" (Unknown)"}, "value": true}, {"name": "param_3", "select": {"type": "interval", "encodings": ["x", "y"]}, "bind": "scales"}], "title": "Sidewalks Smoothness Condition", "transform": [{"filter": "include_filter_out_opt || datum['smoothness type'] != '?'"}], "width": 650, "$schema": "https://vega.github.io/schema/vega-lite/v5.17.0.json", "datasets": {"data-c7cd767b01c954718f66447756eac210": [{"smoothness type": "?", "feature count": 6606, "length(km)": 263.3571293987687}, {"smoothness type": "bad", "feature count": 202, "length(km)": 4.8883051070644274}, {"smoothness type": "excellent", "feature count": 125, "length(km)": 4.618268937303478}, {"smoothness type": "good", "feature count": 532, "length(km)": 17.62979246603865}, {"smoothness type": "horrible", "feature count": 4, "length(km)": 0.0826631821806614}, {"smoothness type": "impassable", "feature count": 4, "length(km)": 0.13028396605245757}, {"smoothness type": "intermediate", "feature count": 391, "length(km)": 11.186277272551479}, {"smoothness type": "very_bad", "feature count": 20, "length(km)": 0.6059131830369366}, {"smoothness type": "very_horrible", "feature count": 6, "length(km)": 0.236517099699315}]}};
       var embedOpt = {"mode": "vega-lite"};
 
       function showError(el, error){
@@ -68,5 +68,6 @@
     })(vegaEmbed);
 
   </script>
+<h4 style="padding-left: 14%;font-weight: normal;font-family: sans-serif;"> - Explanation: This chart allows you to visualize the different <a href='https://wiki.openstreetmap.org/wiki/Key:smoothness'>smoothness</a> conditions of the sidewalks. </h4>
 </body>
 </html>
