manual updates for more comple DQ

--- a/quality_check/pages/improper_keys_crossings.html
+++ b/quality_check/pages/improper_keys_crossings.html
@@ -77,7 +77,20 @@ tr:nth-child(even) {
     <th><b>key</b></th>
     <th><b>value</b></th>
     <th><b>commentary</b></th>
-    </tr>
+    </tr><tr><td><a href=https://www.openstreetmap.org/way/24775977>24775977</a></td><td>name</td><td>Rua São Francisco</td><td>most crossings have no name</td></tr>
+<tr><td><a href=https://www.openstreetmap.org/way/106928168>106928168</a></td><td>name</td><td>Rua Ivo Leão</td><td>most crossings have no name</td></tr>
+<tr><td><a href=https://www.openstreetmap.org/way/121846072>121846072</a></td><td>name</td><td>Rua General Setembrino de Carvalho</td><td>most crossings have no name</td></tr>
+<tr><td><a href=https://www.openstreetmap.org/way/696233930>696233930</a></td><td>name</td><td>Rua 2</td><td>most crossings have no name</td></tr>
+<tr><td><a href=https://www.openstreetmap.org/way/715060923>715060923</a></td><td>name</td><td>Rua Engenheiro Alberto Monteiro de Carvalho</td><td>most crossings have no name</td></tr>
+<tr><td><a href=https://www.openstreetmap.org/way/731579566>731579566</a></td><td>name</td><td>Rua Bruno Filgueira</td><td>most crossings have no name</td></tr>
+<tr><td><a href=https://www.openstreetmap.org/way/731579567>731579567</a></td><td>name</td><td>Rua Padre Ildefonso</td><td>most crossings have no name</td></tr>
+<tr><td><a href=https://www.openstreetmap.org/way/731579568>731579568</a></td><td>name</td><td>Rua Silveira Peixoto</td><td>most crossings have no name</td></tr>
+<tr><td><a href=https://www.openstreetmap.org/way/731579569>731579569</a></td><td>name</td><td>Rua Pasteur</td><td>most crossings have no name</td></tr>
+<tr><td><a href=https://www.openstreetmap.org/way/731579570>731579570</a></td><td>name</td><td>Rua Buenos Aires</td><td>most crossings have no name</td></tr>
+<tr><td><a href=https://www.openstreetmap.org/way/759294592>759294592</a></td><td>name</td><td>Rua Padre Isaias de Andrade</td><td>most crossings have no name</td></tr>
+<tr><td><a href=https://www.openstreetmap.org/way/763039967>763039967</a></td><td>name</td><td>Rua Diogo Mugiatti</td><td>most crossings have no name</td></tr>
+<tr><td><a href=https://www.openstreetmap.org/way/1049505888>1049505888</a></td><td>name</td><td>Rua Pasteur</td><td>most crossings have no name</td></tr>
+
 
         </table>
 
