codebase, manual updates

--- a/quality_check/oswm_qc_main.html
+++ b/quality_check/oswm_qc_main.html
@@ -92,7 +92,7 @@ This Section is dedicated to find errors in the Features of interest in the Cont
 In some cases it's a clear mistake, but it can be just a mispelling or an uncommon value<br><br>
 
 currently, there are the categories presented at the table,<br> each one with the number of occurrences that are item-wise detailed at each link<br>
-<a href="https://github.com/kauevestena/opensidewalkmap_beta/issues">you can post suggestions at repo "issues" section</a>
+<a href="https://kauevestena.github.io/opensidewalkmap_beta/issues">you can post suggestions at repo "issues" section</a>
 
 </p>
 
@@ -102,9 +102,10 @@ currently, there are the categories presented at the table,<br> each one with th
 
     <tr>
     <th><b>Category</b></th>
-    <th><b>Sidewalks</b></th>
-    <th><b>Crossings</b></th>
-    <th><b>Kerbs</b></th>
+    <th><b>sidewalks</b></th>
+<th><b>crossings</b></th>
+<th><b>kerbs</b></th>
+<th><b>other_footways</b></th>
 
     
     </tr>
@@ -126,7 +127,7 @@ The information here can be <b>outdated</b><br>
 <br>
 </p>
 
-<h2>About Each category: </h2>
+<h2>Explaining Each category: </h2>
 
 
 <h3>
